some index building code cleaning looking at SERVER-423, but can't see anything yet